--- a/Webinar13/mysql_express_server/views/persons.hbs
+++ b/Webinar13/mysql_express_server/views/persons.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <a href="/add">Add Person</a>
+    <a href="/pages/add">Add Person</a>
     <br>
 
     <table border="1" cellspacing="10" cellpadding="10">
